# image-processing-hw

./: .gitignore
hw1/: makefile  pyproject.toml
hw1/src/: cifar_inference.py  cifar_train.py  cifar_vgg19.py  image_process.py  main.py  ui.py
hw2/: .gitignore  resnet50-catdog.ipynb  vgg19-mnist.ipynb
hw2/src/: image_process.py  inference.py  main.py  ui.py
