[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["William Chang <wilicw1346@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = "^3.7.3"
PyQt5 = "^5.15.6"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
torchsummary = "^1.5.1"
pillow = "^10.1.0"
tensorboard = "^2.15.0"
opencv-contrib-python = "^4.8.1.78"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
